# Connect4Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  prompt.md
connect4/: Cargo.toml
connect4/src/: lib.rs
connect4/tests/: trace_bug.rs
deploy/: azure-appservice-deploy.sh  azure-containerapps-deploy.sh
server/: Cargo.toml
server/src/: main.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  style.css
