[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
connect4 = { path = "../connect4" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace", "cors", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
hyper = "1.2.0"
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace", "cors", "fs"] }
